# MANFRED_ROS_STACK

./: CMakeLists.txt  stack.xml
fastMarching/: CMakeLists.txt  mainpage.dox  manifest.xml
fastMarching/src/: nodoFastMarching.cpp
localizacionEvolucionDiferencial/: CMakeLists.txt  mainpage.dox  manifest.xml
localizacionEvolucionDiferencial/include/localizacionEvolucionDiferencial/: barridoLaser.h  localizacionEvolucionDiferencial.h  mapa.h
localizacionEvolucionDiferencial/src/: TransformacionCoordenadasSimulacion.m  localizacionEvolucionDiferencial.cpp  mapa.cpp  nodoLocalizacionEvolucionDiferencial.cpp  nodoLocalizacionEvolucionDiferencialBag.cpp
localizacionEvolucionDiferencial/src/bc/: localizacionEvolucionDiferencial_JODIDO.cpp  localizacionEvolucionDiferencial_OK.cpp  localizacionEvolucionDiferencial_OK2.cpp  mapa_JODIDO.cpp  mapa_OK.cpp  nodoLocalizacionEvolucionDiferencial_JODIDO.cpp  nodoLocalizacionEvolucionDiferencial_OK.cpp  nodoLocalizacionEvolucionDiferencial_OK2.cpp
manfred_arm_msgs/: AUTHORS  CMakeLists.txt  INSTALL  manifest.xml
manfred_arm_msgs/action/: ControlMoveArm.action  LocalizacionEvolucionDiferencial.action
manfred_arm_msgs/doc/: Doxyfile
manfred_arm_msgs/msg/: ControlMoveArmAction.msg  ControlMoveArmActionFeedback.msg  ControlMoveArmActionGoal.msg  ControlMoveArmActionResult.msg  ControlMoveArmFeedback.msg  ControlMoveArmGoal.msg  ControlMoveArmResult.msg  LocalizacionEvolucionDiferencialAction.msg  LocalizacionEvolucionDiferencialActionFeedback.msg  LocalizacionEvolucionDiferencialActionGoal.msg  LocalizacionEvolucionDiferencialActionResult.msg  LocalizacionEvolucionDiferencialFeedback.msg  LocalizacionEvolucionDiferencialGoal.msg  LocalizacionEvolucionDiferencialResult.msg  pmac_info.msg
manfred_arm_msgs/msg_gen/lisp/: ControlMoveArmAction.lisp  ControlMoveArmActionFeedback.lisp  ControlMoveArmActionGoal.lisp  ControlMoveArmActionResult.lisp  ControlMoveArmFeedback.lisp  ControlMoveArmGoal.lisp  ControlMoveArmResult.lisp  LocalizacionEvolucionDiferencialAction.lisp  LocalizacionEvolucionDiferencialActionFeedback.lisp  LocalizacionEvolucionDiferencialActionGoal.lisp  LocalizacionEvolucionDiferencialActionResult.lisp  LocalizacionEvolucionDiferencialFeedback.lisp  LocalizacionEvolucionDiferencialGoal.lisp  LocalizacionEvolucionDiferencialResult.lisp  _package.lisp  _package_ControlMoveArmFeedback.lisp  _package_ControlMoveArmGoal.lisp  _package_ControlMoveArmResult.lisp  _package_LocalizacionEvolucionDiferencialAction.lisp  _package_LocalizacionEvolucionDiferencialActionFeedback.lisp  _package_LocalizacionEvolucionDiferencialActionGoal.lisp  _package_LocalizacionEvolucionDiferencialActionResult.lisp  _package_LocalizacionEvolucionDiferencialFeedback.lisp  _package_LocalizacionEvolucionDiferencialGoal.lisp  _package_LocalizacionEvolucionDiferencialResult.lisp  _package_pmac_info.lisp  manfred_arm_msgs-msg.asd  pmac_info.lisp
manfred_arm_msgs/srv/: Get_FK.srv  Get_IK.srv  Get_IK_ed.srv  Get_goal.srv  IK_de_quat.srv  Write_pmac.srv
manfred_arm_msgs/srv_gen/lisp/: Get_FK.lisp  Get_IK.lisp  Get_IK_ed.lisp  Get_goal.lisp  IK_de_quat.lisp  Write_pmac.lisp  _package.lisp  _package_Get_FK.lisp  _package_Get_IK.lisp  _package_Get_IK_ed.lisp  _package_Get_goal.lisp  _package_IK_de_quat.lisp  _package_Write_pmac.lisp  manfred_arm_msgs-srv.asd
odometria/: CMakeLists.txt  mainpage.dox  manifest.xml
odometria/src/: nodoOdometria.cpp  nodoOdometriaBag.cpp  nodoOdometriaPrueba.cpp  nodoOdometriaSimulacion.cpp
odometria/src/bc/: nodoOdometriaProcesarBag_copia_seguridad.cpp  nodoOdometria_copia_seguridad.cpp  nodoOdometria_copia_seguridad_2.cpp
odometria/src/odometria/srv/: __init__.py  (+1 more)
odometria/srv/: servicioOdometria.srv
openmrl/: CMakeLists.txt
openmrl/build_tools/cmake/: FindCWiid.cmake  FindGlut.cmake  FindMagickPP.cmake  FindOPENGL.cmake  FindOpenCV.cmake  FindPLAYER.cmake  FindQT.cmake  FindSubversion.cmake  FindThreads.cmake  FindV4L2.cmake  Findlibv4l2.cmake  Toolchain-arm9.cmake  Toolchain-geode.cmake  deps.cmake  os.cmake  override-config.cmake  utils.cmake  vcs-revision.cmake
openmrl/data/: README
openmrl/data/playerstage/: simple.cfg  simple.world
openmrl/firmware/ir_sensor_cal/: ir_sensor_cal.ino
openmrl/firmware/skybot_IRSensors/: skybot_IRSensors.ino
openmrl/hardware/skySensors/: skySensors.brd  skySensors.cmp  skySensors.dsn  skySensors.net  skySensors.pro  skySensors.sch  skySensors.ses  skySensors.stf
openmrl/src/: config.h  config.h.cmake
openmrl/src/algorithms/: config.h  config.h.cmake
openmrl/src/apps/: CMakeLists.txt
openmrl/src/datatype/: geometry_includes.h  gridmap_includes.h  image.cpp  image.h  object.cpp  object.h  sensordata_includes.h
openmrl/src/drivers/: gamepaddriver.h  joystick.cpp  joystick.h
openmrl/src/models/: rangesensor.h  robot.cpp  robot.h  simskybot.cpp  simskybot.h  simskybot.h.gch
openmrl/src/people/: CMakeLists.txt  CMakeLists.txt.app  CMakeLists.txt.library  CMakeLists.txt.personal
openmrl/src/sim/: simrangedata.cpp  simrangedata.h  simrangereading.cpp  simrangereading.h
openmrl/src/system/: filesystem.cpp  time.cpp  time.h
pmac/: CMakeLists.txt  mainpage.dox  manifest.xml
pmac/include/pmac/: pmac.h
pmac/src/: comandos.cpp  data.cpp  pmac.cpp  pmac_antiguo.cpp  pmac_copia_seguridad.cpp  teleopGUI.c  terminal.cpp  terminal_original.c
pmac/src/Driver_DPRAM/: Makefile  dpram_driver.c  dpram_driver.sh
sicks3000/: CMakeLists.txt  mainpage.dox  manifest.xml
sicks3000/include/sicks3000/: serialIO.h  sicks3000.h
sicks3000/src/: IndicesMedidasLaser.m  nodoSicks3000.cpp  nodoSicks3000Bag.cpp  serialIO.cpp  sicks3000.cpp
sicks3000/src/bc/: nodoSicks3000_copia_seguridad.cpp
sicks3000/srv/: servicioSicks3000.srv
teleoperacionBaseTeclado/: CMakeLists.txt  manifest.xml
teleoperacionBaseTeclado/src/: nodoTeleopBaseTecladoPub.cpp  nodoTeleopBaseTecladoSus.cpp
transformacionesSistemasReferencia/: CMakeLists.txt  mainpage.dox  manifest.xml
transformacionesSistemasReferencia/src/: nodoEscuchador.cpp  nodoTransformacionesSistemasReferencia.cpp
(+236 files in other folders)
