MR_ADD_EXECUTABLE("AUTO" "ALL_FILES_RECURSE")
TARGET_LINK_LIBRARIES(graphExample mrcore)

# If you need some include dir:
# INCLUDE_DIRECTORIES(${PALTALIB_INCLUDE_DIR})

# If you need some link dir:
# LINK_DIRECTORIES(${PALTALIB_LINK_DIRECTORIES})

# If you need to link some other external library:

