MR_ADD_EXECUTABLE("AUTO" "ALL_FILES_RECURSE")

IF(JPEG_FOUND)
	TARGET_LINK_LIBRARIES(${EXE_NAME} ${JPEG_LIBRARIES})
ENDIF(JPEG_FOUND)
# If you need some include dir:
# INCLUDE_DIRECTORIES(${PALTALIB_INCLUDE_DIR})

# If you need some link dir:
# LINK_DIRECTORIES(${PALTALIB_LINK_DIRECTORIES})

# If you need to link some other external library:
TARGET_LINK_LIBRARIES(${EXE_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})

